--- a/styles/resume.css
+++ b/styles/resume.css
@@ -42,3 +42,18 @@
 /**********************************************************************************/
 #resume section#header h2{ text-transform: uppercase; font-size:1.5em; font-weight:700; margin:0;}
 #resume section#header h3{ font-weight:400; margin:0;}
+
+#resume section#resumeMobile #media li, #resume section#resumeMobile #contact li{
+	list-style: none;
+	padding:0;
+}
+
+
+
+
+/* Resume Skills and Languages */
+/**********************************************************************************/
+#resume #skillsLanguages ul{
+	list-style: none;
+	padding:0;
+}
